--- a/content/post/20190404data url真的适合你吗.md
+++ b/content/post/20190404data url真的适合你吗.md
@@ -37,7 +37,7 @@ data:image/jpeg;base64,/9j/4QCpRXhpZgAATU0AKgAAAAgABgEaAAQAAAABAAABLAEbAAQAAAABA
 
 缓解的思路之一就是把大段的base64字符串后置。放在文章末尾，然后在文章中通过一个id来调用，就像论文页脚的注释和参考文档一样。
 
-这也是之前在《[markdown插图的另一种写法]({{< relref "markdown插图的另一种写法.md" >}})》提到markdown两种链接写法之一reference link，它可以使得markdown文件更加易读。
+这也是之前在《[markdown插图的另一种写法]({{< relref "20190315markdown插图的另一种写法.md" >}})》提到markdown两种链接写法之一reference link，它可以使得markdown文件更加易读。
 具体写法如下：
 
 ```bash
