added more and fixed more

--- a/content/post/20190305梅津和时：永远的差不多先生.md
+++ b/content/post/20190305梅津和时：永远的差不多先生.md
@@ -1,7 +1,7 @@
 +++
 title= "梅津和时：永远的差不多先生"
 date= 2019-03-05T21:14:36+08:00
-tags = ["爵士","日本"]
+tags = ["音乐","爵士","日本"]
 categories = ["音乐"]
 mathjax = false
 slug = "Toshinori Kondo，Mr. More or less"
