--- a/content/post/20200301将闲置ECS改造成anki服务器.md
+++ b/content/post/20200301将闲置ECS改造成anki服务器.md
@@ -16,7 +16,7 @@ keywords = ["阿里云","anki","SSH","anki-sync-server"]
 
 之前写了篇将本地机子转化为hugo本地服务器的心得：[《如何给iPhone快速安排上Mac制作的anki牌组》]({{<  relref  "post/20200223如何给你的iPhone快速安排上Mac制作的牌组.md" >}})，但这只是权宜之计，尽管可以大大提升速率，但无形间牺牲了效率，事实上这样处理牌组同步还是「治标不治本」。假想建一个能像anki稳定的端对端的同步服务器，方便又快捷，该多好。
 
-Anki的官方服务器坐标在日本，由于周知的缘故，下行速度不太理想，不说大容积的牌组，就是数量可观的小容积文件，也够Anki喝一壶的了。且，据网友反馈，超过250MB的牌组，anki是不提供同步服务的，而anki很多影音牌组都是以G来论的。
+Anki的官方服务器坐标在德国，由于周知的缘故，下行速度不太理想，不说大容积的牌组，就是数量可观的小容积文件，也够Anki喝一壶的了。且，据网友反馈，超过250MB的牌组，anki是不提供同步服务的，而anki很多影音牌组都是以G来论的。
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200301235606.png" >}}
 
