--- a/content/post/20190428狸奴.md
+++ b/content/post/20190428狸奴.md
@@ -2,15 +2,13 @@
 title= "狸奴"
 date= 2019-04-28T17:44:35+08:00
 type = "post"
-categories = ["琐记"]
-draft = false
+categories = ["文史"]
 reward = true
 mathjax = false
 slug = "some ancient stories about cats"
-keywords = ["古代","狸猫"]
+keywords = ["文史","猫","狸奴"]
+tags = ["文史"]
 +++
-经常被家人呼作为变态。仅仅因为自己喜欢养猫（不多，就一只英短异瞳），收养过流浪猫（不多，就一只未满月橘猫，现已送走）。关于猫的争吵，如同日常三餐一样令人绝望，日复一日，我也对家人的发问熟视无睹，譬如「养猫的男人是不是变态」、「养猫的男人性格blabla」……，我倒不觉得是自己病了，反倒觉得没文化真可怕。
-
 养猫不止是一种现代人找乐子、寻排遣的方式，也是古代文人墨客的一种情感寄托，古人唤猫昵称“狸奴”，也作“黧奴”，大概源起五代。
 
 陆游（1125年—1210年）写猫常以“狸奴”代称，最喜纠结狸奴捕鼠不捕鼠，既能捕鼠，又常纠结有无鱼餐犒赏之。如
@@ -38,5 +36,3 @@ keywords = ["古代","狸猫"]
 读之可知放翁深谙喵星人暖床之用。
 
 佛教中有“狸奴白牯”之公案，即猫咪和白牛，以此二者喻指慧根佛性不高者。放翁盖不能允。
-
-
