--- a/content/post/20190707为你的zsh安装翻墙弹椅.md
+++ b/content/post/20190707为你的zsh安装翻墙弹椅.md
@@ -3,7 +3,7 @@ title= "翻墙弹椅"
 date= 2019-07-07T14:38:34+08:00
 type = "post"
 categories = ["技术"]
-draft = false
+draft = true
 toc = true
 comments = true
 reward = true
