--- a/content/post/20200302猎户星座.md
+++ b/content/post/20200302猎户星座.md
@@ -9,6 +9,7 @@ aplayer = true
 mathjax = false
 slug = "Orion"
 keywords = ["朴树","松任谷由実","Carl Sagan"]
+tags = ["速写"]
 +++
 二零一八年某个冷肃的周末，北京什刹海公园里的人流目不暇接、熙攘如虹，一切依然像百年前林语堂笔下所描述的「苍古淳雅」，像张暖忻的三十年前拍的《北京，你早》一样富有烟火气。溜冰打趣的孩童，笑意盈盈的卖花老人，笨拙吁气的人群……
 
@@ -52,11 +53,10 @@ data-loop="none">
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/36d2acb23e4c867b0454v3.png" >}}
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/ac4e65447d662f0a05e6v2.png" >}}
 
->就是那个瞬间，<br>
->能让我发现自己其实活在一个没有那么糟糕的世界。<br>
->我费尽所有的力气在音乐中摇摆，<br>
->用尽自己的方式成为音乐的一部分，<br>
->我想成为鲸鱼……<br>
+>就是那个瞬间，
+>能让我发现自己其实活在一个没有那么糟糕的世界。
+>我费尽所有的力气在音乐中摇摆，
+>用尽自己的方式成为音乐的一部分，
 
 1990年，NASA（美国国家航空航天局）外太阳系空间探测器旅行者1号于距地球64亿公里处最后一次回望母星，拍摄下这张编号为PIA00452的照片。
 
