--- a/content/post/20080328再寄小读者.md
+++ b/content/post/20080328再寄小读者.md
@@ -13,7 +13,7 @@ keywords = ["原创","随笔"]
 +++
 东坡的词，我还记得<青玉案>，有三句“作个归期天应许。春衫犹是，小蛮针线，曾湿西湖雨。”尤其曾湿西湖雨，清语中有绝奇，爱不忍释。辛的词，粗粗莽莽，桀傲雄奇，按李易安的说法，应该在苏之上。提到李易安，我也是倾心的，她的词，无论风神、无论气骨，弗藉女身已是冠绝一时，直欲与姜白石的清虚相鼓吹。
 
-诗不一定庄，词不一定媚，虽然词人多以婉约为正宗，但宋朝各家并非泾渭分明、判然分途而拘于一格，苏、辛也有妩媚风流，秦、柳也会雄放豪宕，各极其妙。我不刻意敬身某宗某派，浓浓淡淡疏疏密密的相兼，随心而读。然而，记叨纳兰性的“记否轻纨小扇，又几番凉热”的时刻，总是多于陈维的“老来猛气还轩举”的。
+诗不一定庄，词不一定媚，虽然词人多以婉约为正宗，但宋朝各家并非泾渭分明、判然分途而拘于一格，苏、辛也有妩媚风流，秦、柳也会雄放豪宕，各极其妙。我不刻意敬身某宗某派，浓浓淡淡疏疏密密的相兼，随心而读。然而，记叨纳兰性德的“记否轻纨小扇，又几番凉热”的时刻，总是多于陈维崧的“老来猛气还轩举”的。
 
 短章小句也于我总在渐行渐远，性慵情懒，下不了大功夫，惹得以往烂熟的段子常常卡壳，甚至忘了个干净。现今百无聊赖才翻得些明清笔记的好，谈情说理、信笔直书，毫无滞碍，例如大家张岱的任情适性、茶淫橘虐，很是对胃口。
 <!--more-->
