--- a/content/post/20190403“被绑架”的大师.md
+++ b/content/post/20190403“被绑架”的大师.md
@@ -11,7 +11,7 @@ mathjax = false
 slug = "Johannes Möller concert in Ningbo"
 keywords = ["古典吉他","指弹吉他"]
 +++
-上月30日，在省音乐家协会、市吉他协会组织承办下，带着bosco去听了约翰内斯·莫勒（Johannes Möller）宁波站巡演。
+上月30日，带着bosco去听了约翰内斯·莫勒（Johannes Möller）宁波站巡演。
 
 斯夜，甬城几乎所有学琴的家庭为一睹国际大师风范，拖儿带女，齐聚一堂，原本清凛的文化中心车水马龙。
 
@@ -59,9 +59,7 @@ data-loop="none">
 
 学识渊博的浮士德与梅菲斯特签下了恶魔契约后求仁得仁，而如今莫勒也换上了20万刀的定制吉他[^2]，皆大欢喜。至于期满后会如何，谁会顾及25年后的诗和远方呢？
 
-散场后，在主持人喊麦式的煽点下，大师的个人CD被哄抢一空。焖挤潮热的剧场里，信众们应景而自觉地奉上50-100元购置曲谱，毕竟随谱附赠一张中国式的剪刀手影像。
 
-照片里，莫勒笑得很专业。
 
 [l1]: https://www.youtube.com/watch?v=TOKflZj57j8
 [l2]: https://www.youtube.com/watch?v=WIjxaXrXL6A
