--- a/content/post/20200301将闲置ECS改造成anki服务器.md
+++ b/content/post/20200301将闲置ECS改造成anki服务器.md
@@ -14,13 +14,13 @@ comments = false
 keywords = ["阿里云","anki","SSH","anki-sync-server"]
 +++
 
-之前写了篇将本地机子转化为hugo本地服务器的心得：[《如何给iPhone快速安排上Mac制作的anki牌组》]({{<  relref  "post/20200223如何给你的iPhone快速安排上Mac制作的牌组.md" >}})，但这只是权宜之计，尽管可以大大提升速率，但无形间牺牲了效率，事实上这样处理牌组同步还是「治标不治本」。假想建一个能像anki稳定的端对端的同步服务器，方便又快捷，该多好。
+早前写了篇将本地机子转化为hugo本地服务器的心得：[《如何给iPhone快速安排上Mac制作的anki牌组》]({{<  relref  "post/20200223如何给你的iPhone快速安排上Mac制作的牌组.md" >}})，但此乃权宜之计，尽管可以提升速率，但代价是牺牲了效率，「治标不治本」。假想建一个能像anki稳定的端对端的同步服务器，方便又快捷，该多好。
 
-Anki的官方服务器坐标在德国，由于周知的缘故，下行速度不太理想，不说大容积的牌组，就是数量可观的小容积文件，也够Anki喝一壶的了。且，据网友反馈，超过250MB的牌组，anki是不提供同步服务的，而anki很多影音牌组都是以G来论的。
+Anki的官方服务器坐标在德国，由于周知的缘故，下行速度不太理想，不说大容积的牌组，就是数量可观的小容积文件，也够Anki喝一壶的了。且据网友反馈，，anki是不提供超过250MB的牌组的同步服务，然而anki很多影音牌组都是以G来论的。
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200301235606.png" >}}
 
-如此，将同步服务器放置在本地或者大带宽的内网就成为一个刚需。这个想法在我的脑海里盘旋了许久，终于按耐不住手欠，将自己一个闲置已久的阿里云ECS改造成能响应PC端及手机端的anki同步服务器。
+如此，将同步服务器放置在本地或者大带宽的内网就成为一个刚需。这个想法在我的脑海里盘旋了许久，终于按耐不住，将自己一个闲置已久的阿里云ECS改造成能响应PC端及手机端的anki同步服务器。
 
 <!--more-->
 
