fixed blocked mixed-content errors

--- a/content/post/20190226如何自定义hugo的图片展示.md
+++ b/content/post/20190226如何自定义hugo的图片展示.md
@@ -33,7 +33,7 @@ description = "XXYYZZ"
 }
 ```
 效果如下：
-{{< figure src="http://ian2.oss-cn-hangzhou.aliyuncs.com/2019-02-27-061114.jpg" width="90%" caption="图片居中" caption-position="bottom" caption-effect="fade">}}
+{{< figure src="https://ian2.oss-cn-hangzhou.aliyuncs.com/2019-02-27-061114.jpg" width="90%" caption="图片居中" caption-position="bottom" caption-effect="fade">}}
 
 ### 图文混排，图片居左
 ```css
@@ -67,7 +67,7 @@ description = "XXYYZZ"
 }
 ```
 效果如下：
-{{< figure src="http://ian2.oss-cn-hangzhou.aliyuncs.com/2019-02-27-061427.jpg" width="90%" caption="图片居右" caption-position="bottom" caption-effect="slide">}}
+{{< figure src="https://ian2.oss-cn-hangzhou.aliyuncs.com/2019-02-27-061427.jpg" width="90%" caption="图片居右" caption-position="bottom" caption-effect="slide">}}
 
 ### Markdown写法
 
