--- a/content/post/20200303hugo升级那些事儿.md
+++ b/content/post/20200303hugo升级那些事儿.md
@@ -11,10 +11,10 @@ douban = false
 mathjax = false
 slug = "upgrade hugo to 0.6.x"
 comments = true
-keywords = ["Hugo","Upgrade","issue"]
+keywords = ["Hugo","Upgrade","zeit"]
 tags = ["Hugo"]
 +++
-从去年九月开始，很长一段时间一直停留在Hugo v0.56，因为没搞明白Homebrew的回滚机制。自从用上了Netlify，在`netlify.toml`的环境文件里完全可以自由控制版本，由此一发不可收拾，彻底放飞自我。想升就升，想降就降，不亦乐乎？
+从去年九月开始，很长一段时间一直停留在Hugo v0.56，因为没搞明白Homebrew的回滚机制。自从托管给了zeit，在`now.json`的环境文件里完全可以自由控制版本，由此一发不可收拾，彻底放飞自我。想升就升，想降就降，不亦乐乎？
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200304220315.png" >}}
 
