edited latest post

--- a/content/post/20200327吃螃蟹与怕老婆.md
+++ b/content/post/20200327吃螃蟹与怕老婆.md
@@ -42,6 +42,8 @@ keywords = ["红楼梦","齐东野语"]
 
 贾自知多言，悔之已晚，戏语传了开去。
 
+{{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/齐东野语.jpg" >}}
+
 这则轶事又见于清人周人龙的《挑灯集异》。
 
 同朝的曹雪芹《红楼梦》以贾、甄（真）作姓，且有开螃蟹宴，咏螃蟹诗之情节，怕不是渊源于此。
