change local static resources to cdn and shut down lots dead comments

--- a/content/post/20190319Mweb和hugo是绝配.md
+++ b/content/post/20190319Mweb和hugo是绝配.md
@@ -5,7 +5,7 @@ mathjax = false
 type = "post"
 toc=true
 codes=["bash"]
-comments = true
+comments = false
 categories = ["技术"]
 tags = ["hugo"]
 slug = "when hugo meet Mweb"
