--- a/content/post/20190327学琴记之C大调小行板.md
+++ b/content/post/20190327学琴记之C大调小行板.md
@@ -13,7 +13,7 @@ description = "数周前，bosco开始练习Mattoe Carcassi（1792-1853）的卡
 +++
 数周前，bosco开始练习[Mattoe Carcassi][l1]（1792-1853）的卡卡59（[Méthode complète pour la guitare, Op. 59][l2]）
 
-{{<img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/2019-03-27 at 13.45.jpg" alt="">}}
+{{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200328221356.png" >}}
 
 最最最基础的第一首曲子《C大调的小行板（Andantino in C major）》就遭遇卡壳，尽管每日练琴时间在30-90分钟之间，但是三周后，依然存在诸多初学者会出现的细节问题。
 
