--- a/content/post/20190401家庭暴力告诫书.md
+++ b/content/post/20190401家庭暴力告诫书.md
@@ -3,7 +3,7 @@ title= "有家庭暴力告诫书≠存在家庭暴力行为"
 date= 2019-04-01T20:30:55+08:00
 type = "post"
 categories = ["法律"]
-comments = true
+comments = false
 reward = true
 mathjax = false
 slug = "what did Domestic violence written reprimands mean"
