--- a/content/post/20190408爱了多年的人都没有白活.md
+++ b/content/post/20190408爱了多年的人都没有白活.md
@@ -1,9 +1,9 @@
 +++
 title= "爱了多年的人都没有白活"
 date= 2019-04-08T16:49:12+08:00
-tags = ["诗抄"]
+tags = ["诗歌"]
 categories = ["文学"]
-comments = true
+comments = false
 reward = true
 mathjax = false
 slug = "A Poem titled as fireflies from Rolf Jacobsen"
