--- a/content/post/20190411下落不明.md
+++ b/content/post/20190411下落不明.md
@@ -6,7 +6,7 @@ type = "post"
 tags = ["达明一派","漫画","法律"]
 categories = ["琐记"]
 draft = false
-comments = true
+comments = false
 douban = true
 reward = true
 mathjax = false
