--- a/content/post/20190416第一份简历.md
+++ b/content/post/20190416第一份简历.md
@@ -4,16 +4,18 @@ date= 2019-04-16T00:52:17+08:00
 type = "post"
 categories = ["琐记"]
 draft = false
-comments = true
+comments = false
 reward = true
 mathjax = false
-slug = "first CV in my sons life"
-+++
-一觉醒来，甬城四大“民校”齐齐发声，公布了2019年各自的幼升小招生简章，吓得爹娘们灰头土面、如临大敌。
+slug = "first CV in life"
 
-其他都好说，唯有适龄儿童自我介绍一栏难以下笔，瞻前顾后，左思右顾，才挤出一份“自嘲版简历”，不知道儿子长大后会不会将我拉黑。
++++
+一觉醒来，本埠四大“民校”齐齐发声，公布了2019年各自的幼升小招生简章，吓得爹娘们灰头土面、如临大敌。
+
+其他都好说，唯有适龄儿童自我介绍一栏难以下笔，瞻前顾后，左思右顾，才挤出一份“自嘲版简历”，但求儿子长大后会不会将我拉黑。
+
 <!--more-->
-----
+
 姓x，名yy，借典陶渊明《杂诗》“猛志逸四海，骞翮思远翥”。
 
 姓名复杂，性格简单。开怀其内，开朗其外；娘胎预装“自来熟”系统，不熟不要钱；臭美，自封班级第二帅，第一长年空缺；
