--- a/content/post/20190707为你的zsh安装翻墙弹椅.md
+++ b/content/post/20190707为你的zsh安装翻墙弹椅.md
@@ -5,7 +5,7 @@ type = "post"
 categories = ["技术"]
 draft = true
 toc = true
-comments = true
+comments = false
 reward = true
 mathjax = false
 codes = ["bash"]
