--- a/content/post/20190325仲代达矢：演员毕生的三个谜题.md
+++ b/content/post/20190325仲代达矢：演员毕生的三个谜题.md
@@ -2,7 +2,7 @@
 title= "仲代达矢：演员毕生的三个谜题"
 date= 2019-03-25T10:35:30+08:00
 categories = ["电影"]
-comments = true
+comments = false
 mathjax = false
 reward= true
 slug = "Tatsuya Nakadai: a actress need to answer three puzzles in life"
