--- a/content/post/20190501娶妻当如阿宝.md
+++ b/content/post/20190501娶妻当如阿宝.md
@@ -4,7 +4,7 @@ date= 2019-05-01T17:37:06+08:00
 type = "post"
 categories = ["文史"]
 draft = true
-comments = true
+comments = false
 reward = true
 douban = false
 mathjax = false
