--- a/content/post/20200303hugo升级那些事儿.md
+++ b/content/post/20200303hugo升级那些事儿.md
@@ -6,13 +6,14 @@ categories = ["技术"]
 draft = false
 toc = true
 reward = true
-codes = ["bash","html","json","yaml","go"]
+codes = ["bash","htmlbars","json","yaml","go"]
 douban = false
 mathjax = false
 slug = "upgrade hugo to 0.6.x"
 comments = true
 keywords = ["Hugo","Upgrade","zeit"]
 tags = ["Hugo"]
+
 +++
 从去年九月开始，很长一段时间一直停留在Hugo v0.56，因为没搞明白Homebrew的回滚机制。自从托管给了zeit，在`now.json`的环境文件里完全可以自由控制版本，由此一发不可收拾，彻底放飞自我。想升就升，想降就降，不亦乐乎？
 
@@ -81,7 +82,7 @@ tags = ["Hugo"]
 
 然鹅，并无卵用。于是，遍历了互联网终于找到了解决方案－在shortcode的模板代码首行中写入：
 
-```html
+```go
 {{ $_hugo_config := `{ "version": 1 }` }}
 ```
 
@@ -113,7 +114,7 @@ layouts
 
 为了能够实现在新标签页面中打开外链的目的，可以在`layouts/_default/_markup`目录下创建一个名为`render-link.html`的新文件，文件内容为：
 
-```html
+```htmlbars
 <a
   href = "{{.Destination | safeURL}}"
   {{  with  . Title  }}  title = "{{.}}" {{  end  }}
@@ -127,7 +128,7 @@ layouts
 ```
 那么会被 渲染成这样的代码
 
-```
+```htmlbars
  href= "Https://nei.st/"  Title= <a "华人独立政见媒体流"  Target= "_Blank"  Rel= "Noopener">
   Neist  </a>
 ```
@@ -175,7 +176,7 @@ Github对于GFM hardwraps有一段介绍：
 
 以下列代码为例：
 
-```html
+```htmlbars
 Line one
 Line two
 
@@ -183,7 +184,7 @@ Par two
 ```
 如果设置开启hardwraps，则输出：
 
-```html
+```htmlbars
 <p>Line one
 <br>Line two</p>
 
@@ -192,7 +193,7 @@ Par two
 
 如果设置关闭hardwraps，则输出：
 
-```html
+```htmlbars
 <p>Line one Line two</p>
 
 <p>Par two</p>
@@ -236,7 +237,7 @@ func (r *FootnoteHTMLRenderer) renderFootnoteBackLink(w util.BufWriter, source [
 
 前代注脚的通常被渲染成
 
-```html
+```htmlbars
 
 <div class="footnotes" rel="footnote">
 <hr>
@@ -251,7 +252,7 @@ func (r *FootnoteHTMLRenderer) renderFootnoteBackLink(w util.BufWriter, source [
 ```
 在Hugo v0.6.x后，则为
 
-```html
+```htmlbars
 <section class="footnotes" role="doc-endnotes">
 <hr><ol>
 <li id="fn:1" role="doc-endnote">text1</li>
