fixed something and changed several cdns

--- a/content/post/20190712chrome支持暗黑模式适配.md
+++ b/content/post/20190712chrome支持暗黑模式适配.md
@@ -8,7 +8,7 @@ toc = true
 comments = false
 reward = true
 mathjax = false
-codes = ["bash","html","css"]
+codes = ["bash","htmlbars","css"]
 slug = "Chrome 76 beta switch hugo dark theme with prefers-color-scheme"
 keywords = ["chrome","prefers-color-scheme","dark mode","hugo"]
 +++
@@ -46,7 +46,7 @@ Value:  no-preference | light | dark
 
 以本主题为例，编辑Hugo主题的layout-header代码（每个主题位置各异），将下列代码写入head标签内[^3][^4]，一般网站默认都是light模式的，所以只写入dark模式的样式即可：
 
-```html
+```htmlbars
 <style>
 @media (prefers-color-scheme: dark) {
   /* styles for users who prefer UIs with dark themes */
@@ -63,7 +63,7 @@ Value:  no-preference | light | dark
 }
 ```
 
-```html
+```htmlbars
 <script>
 if (matchMedia('(prefers-color-scheme: dark)').matches) {
   // conditional JavaScript code for such users
@@ -74,12 +74,12 @@ if (matchMedia('(prefers-color-scheme: dark)').matches) {
 
 暗黑模式下，打印网站可能会将黑色背景也打印出来，因此，有必要为打印机指定专用的打印样式，例如：
 
-```html
+```htmlbars
 <link rel="stylesheet" media="print" href="my-print-style.css">
 ```
 或者亦可使用现成框架库[Gutenberg方案](https://github.com/BafS/Gutenberg)
 
-```html
+```htmlbars
 <link rel="stylesheet" href="https://unpkg.com/gutenberg-css@0.4" media="print">
 <link rel="stylesheet" href="https://unpkg.com/gutenberg-css@0.4/dist/themes/oldstyle.min.css" media="print">
 ```
