--- a/content/post/20190326mermaid.md
+++ b/content/post/20190326mermaid.md
@@ -113,17 +113,17 @@ gantt
       section 1.《婚姻法》
        1980版《婚姻法》            : a1, 1981-01-01,2001-04-28
        1980版《婚姻法》第一次修订   : a2, 2001-04-28, 2019-03-27
-
+    
        section 2.《婚姻法》解释
        解释（一）                  :active, b1, 2001-12-27, 2004-04-01
        解释（二）                  :active, b2, 2004-04-01, 2011-08-13
        解释（三）                  :active, b3, 2011-08-13, 2019-03-27
-
+    
        section 3.夫妻债务法律法规
        《解释（二）的补充规定》      :crit, active, c1, 2017-02-28, 2019-03-28
        《关于依法妥善审理涉及夫妻债务案件有关问题的通知》   :crit,active, c2, 2017-02-28, 2019-03-27
        《关于审理涉及夫妻债务纠纷案件适用法律有关问题的解释》 :crit, active, c3, 2011-08-13, 2019-03-27
-
+    
       section 4.未来如何
        让我们拭目以待            :crit,done,d1, 2019-03-27,2021-03-27
 
@@ -148,10 +148,11 @@ gantt
 *   **任务id** 必须全局唯一，可被后续任务引用，在状态后面（如果有状态描述）。此操作比较灵活，只需修改起始工作的时间，后置（**after**标记）任务时间全部会改变。如果没有后续依赖，也可省略任务id。
 *   最后是任务时间，一般需要两个，开始和结束时间。可以是绝对时间或相对时间，非常灵活。
 
-如果熟悉markdonw，对标记语言有一定了解，5分钟可以学会使用mermaid绘制gantt图管理项目。不过mermaid虽然敏捷，但是其gantt图还是有两个特性没有，
+如果熟悉markdonw，对标记语言有一定了解，5分钟可以学会使用mermaid绘制gantt图管理项目。不过mermaid虽然敏捷，但是其gantt图还是有两个特性没有：
 
-1.  无法按百分比显示当前项目进度。
-2.  没有里程碑标记。
+* 无法按百分比显示当前项目进度；
+
+* 没有里程碑标记；
 
 ## 其他（other）
 {{<mermaid>}}
