--- a/content/post/20190328假如最高法是一个产品经理.md
+++ b/content/post/20190328假如最高法是一个产品经理.md
@@ -47,4 +47,4 @@ description = "中国婚姻法近70年的变迁"
 [b3]: http://www.court.gov.cn/fabu-xiangqing-77352.html
 [b4]: http://www.chaoyang.jcy.gov.cn/art/2018/6/27/art_3079_12960.html
 [b5]: https://zhuanlan.zhihu.com/p/37399840
-[c1]: {{< relref "20190326mermaid.md#anothersample">}}
+[c1]: {{< relref "20190326hugo新增mermaid功能.md#anothersample">}}
