--- a/content/post/20190322如何计算日期间隔.md
+++ b/content/post/20190322如何计算日期间隔.md
@@ -71,9 +71,9 @@ datespan 3/23 to 11/12 //注意中间有一个to
 
 显而易见，Date Span支持精确到分钟的日期差显示，另外也支持工作周(bussiness week)、周(week)、天数(day)、小时(hour)、分钟(minute)等单位，唯独不支持月数(month)，恐怕这也是唯一的遗憾了，常见的解决办法无非有：
 
-1. 直接心算 : $f(x)=a years + b months =(12a + b)months$
-2. 修改源码
-在Date Span配置界面右下角跳转到Data Span目录：
+* 直接心算 : $f(x)=a years + b months =(12a + b)months$
+* 修改源码
+  在Date Span配置界面右下角跳转到Data Span目录：
 
 {{<img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/2019-03-23%20at%2009.06.jpg" alt="">}}
 
