--- a/content/post/20200329阻止anki自动切换黑暗模式的正确姿势.md
+++ b/content/post/20200329阻止anki自动切换黑暗模式的正确姿势.md
@@ -54,7 +54,7 @@ $ defaults write net.ankiweb.dtop NSRequiresAquaSystemAppearance -bool Yes
 注：如要关闭强制该模式，输入另一行命令：
 
 ```shell
-defaults delete  net.ankiweb.dtop  NSRequiresAquaSystemAppearance
+$ defaults delete  net.ankiweb.dtop  NSRequiresAquaSystemAppearance
 ```
 重启，依然无效！！
 
