修正若干错误

--- a/content/post/20190712chrome 76开启深色模式适配.md
+++ b/content/post/20190712chrome 76开启深色模式适配.md
@@ -1,5 +1,5 @@
 +++
-title= "chrome 76开启暗黑模式适配"
+title= "chrome 76开启深色模式适配"
 date= 2019-07-12T11:38:34+08:00
 type = "post"
 categories = ["技术"]
@@ -11,11 +11,13 @@ mathjax = false
 codes = ["bash","htmlbars","css"]
 slug = "Chrome 76 beta switch hugo dark theme with prefers-color-scheme"
 keywords = ["chrome","prefers-color-scheme","dark mode","hugo"]
+
 +++
 🎉🎉一个普大喜奔的好消息：最新的Chrome 76 Beta特性更新说明[^1]，已经宣告正式支持“prefers-color-scheme(以下简称PCS)”CSS选项。这个选项有啥用呢？
 
 如果浏览器支持这一选项，而您的网站恰好支持dark mode主题，您无需切换任何内容，因为浏览器会为您处理日间/夜间主题切换，你就不需要装Dark Reader、Night Eye、High Contrast、Turn Off the Lights等诸如此类的chrome扩展[^2]。
 <!--more-->
+
 ## PCS是何方妖孽？
 
 根据最早支持PCS的[Firefox文档](https://webflow.com/website/CSS-Color-Scheme-prefers-dark)介绍：
