--- a/content/post/20200329阻止Anki“自黑”的正确姿势.md
+++ b/content/post/20200329阻止Anki“自黑”的正确姿势.md
@@ -1,5 +1,5 @@
 +++
-title= "阻止anki自动切换黑暗模式的正确姿势"
+title= "阻止Anki“自黑”的正确姿势"
 date= 2020-03-29T20:11:17+08:00
 type = "post"
 tags = ["anki"]
@@ -13,7 +13,7 @@ slug = "how to prevent anki from auto-switching to dark mode"
 +++
 catalina一黑到底，连地头蛇微信都不得不服软，但真的好吗？
 
-只能说，几家欢喜几家忧。对anki for mac版本 2.1.20 (47a1bf8b)而言，黑暗模式就是个迷。程序设置里尽管有dark mode，但实际上形同摆设。无论勾选与否，anki皆会随着系统的自动切换而切换。夜晚看anki，黑乎乎一坨，好不烦恼。
+只能说，几家欢喜几家忧。对anki for mac版本 2.1.20 (47a1bf8b)而言，黑暗模式就是个迷。程序设置里尽管有dark mode选项，但实际上形同摆设。无论勾选与否，anki皆会随着系统的自动切换而切换。夜晚看anki，黑乎乎一坨，好不烦恼。
 
 <!--more-->
 
@@ -21,7 +21,7 @@ catalina一黑到底，连地头蛇微信都不得不服软，但真的好吗？
 
 有人说改info.plist可拯救[^1]，于是我在系统应用程序里找到Anki.app，右键打开Contents目录，用轻量级编辑器打开Info.plist文件后，找到如下两个参数：
 
-```plist
+```xml
 	<key>NSRequiresAquaSystemAppearance</key>
 	<false/>
 	<key>NSSupportsAutomaticGraphicsSwitching</key>
@@ -29,7 +29,7 @@ catalina一黑到底，连地头蛇微信都不得不服软，但真的好吗？
 ```
 修改为：
 
-```plist
+```xml
 	<key>NSRequiresAquaSystemAppearance</key>
 	<true/>
 	<key>NSSupportsAutomaticGraphicsSwitching</key>
@@ -42,7 +42,7 @@ catalina一黑到底，连地头蛇微信都不得不服软，但真的好吗？
 又有技术博说，Mojave时代只需一句命令行可破[^2]，于是我想方设法去寻得anki的Bundle Identifier
 
 ```shell
-$osascript -e 'id of app "Anki"'
+$ osascript -e 'id of app "Anki"'
 net.ankiweb.dtop
 ```
 然后键入：
@@ -51,7 +51,7 @@ net.ankiweb.dtop
 $ defaults write net.ankiweb.dtop NSRequiresAquaSystemAppearance -bool Yes
 ```
 
-注：如要关闭强制该模式，输入另一行命令：
+注：如要关闭强制该模式，需输入另一行命令：
 
 ```shell
 $ defaults delete  net.ankiweb.dtop  NSRequiresAquaSystemAppearance
@@ -60,7 +60,7 @@ $ defaults delete  net.ankiweb.dtop  NSRequiresAquaSystemAppearance
 
 ## 官方答案
 
-最终，Anki的作者Damien Elmes给出了最正确且最简单的官方答案：<red>重新下载</red>
+最终，Anki的作者Damien Elmes给出了最正确且最简单的官方答案：<font color="red">重新下载</font>
 
 >When using macOS in dark mode, recent Anki versions will automatically switch to night mode. If you want to force Anki to use light mode while using the rest of your system in dark mode, please install [Anki 2.1.21beta3](https://github.com/ankitects/anki/releases/download/2.1.23/anki-2.1.23-mac-alternate.dmg) or later, and install the -alternate version rather than the -standard one.[^3]
 
