fixed mathjax errors and others

--- a/content/post/20200329阻止Anki“自黑”的正确姿势.md
+++ b/content/post/20200329阻止Anki“自黑”的正确姿势.md
@@ -7,7 +7,7 @@ draft = false
 codes =["shell","xml"]
 toc = true
 categories = ["技术"]
-math = false
+mathjax = false
 description = "mathjax 实例"
 slug = "how to prevent anki from auto-switching to dark mode"
 +++
