conver hugo date to chinese words & add post

--- a/content/post/20181009旧唱片报节目及报节目人.md
+++ b/content/post/20181009旧唱片报节目及报节目人.md
@@ -5,7 +5,7 @@ type = "post"
 mathjax = false
 tags = ["曲艺","转载","文史"]
 categories = ["文史"]
-slug = "How to Escape Hugo shortcodes within Hugo markdown"
+slug = "some anecdotes of chinese old record"
 keywords = ["曲艺","文史"]
 +++
 {{<img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/2018-10-09-040153.jpg" alt="杨小楼、梅兰芳，1931年在长城唱片公司录制《霸王别姬》后与录音策划人及外籍录音师等合影">}}
