--- a/content/post/20190127卖书人徐元勋.md
+++ b/content/post/20190127卖书人徐元勋.md
@@ -1,35 +1,38 @@
 +++
-title= "卖书人徐元勋"
+title= "賣書人徐元勳"
 categories = ["文史"]
 type = "post"
 vertical = true
+mathjax = false
 tags = ["藏书","旧书"]
 date= 2019-01-27T09:47:06+08:00
 +++
-徐元勋是中国书店一位卖古旧书的老师傅，去年去世了。得知他去世的消息，就想写一点东西。在我的眼里，他就是清人李文藻在《琉璃厂书肆记》里提到的那种“颇深于书”的卖书人。
+徐元勳是中國書店一位賣古舊書的老師傅，去年去世了。得知他去世的消息，就想寫一點東西。在我的眼裏，他就是清人李文藻在《琉璃廠書肆記》裏提到的那種“頗深於書”的賣書人。
 
-我买旧本古籍起步很晚，是１９９２年调到北京工作以后的事情。当时我住在北大附近，海淀中国书店的古籍业务恰在这时重新开张，徐师傅被经理梁永进从琉璃厂大库请来，负责经管古籍。由于来往近便，那一时期我竟把逛海淀中国书店当作了日常的消遣。也就是在这时，我正式开始试探着买一点古籍，并很快熟悉了徐元勋师傅。
+我買舊本古籍起步很晚，是壹玖玖貳年調到北京工作以後的事情。當時我住在北大附近，海淀中國書店的古籍業務恰在這時重新開張，徐師傅被經理樑永進從琉璃廠大庫請來，負責經管古籍。由於來往近便，那一時期我竟把逛海淀中國書店當作了日常的消遣。也就是在這時，我正式開始試探着買一點古籍，並很快熟悉了徐元勳師傅。
 <!--more-->
-王锺翰先生在《北京厂肆访书记》一文中曾经写到：“厂肆书贾，非南工即冀州，以视昔年之多为江南人者，风气迥乎不同。重行规，尚义气，目能鉴别，心有轻重。”王先生这篇文章写在１９５０年，说的是解放前三、四十年间的情况。徐师傅确切的籍贯我说不清楚，但肯定是河北南宫、冀州一带人则没有疑问，并且也是解放前在琉璃厂学的徒，其乡前辈“重行规，尚义气，目能鉴别，心有轻重”这些特点，在他身上都有所继承和体现。
+王鍾翰先生在《北京廠肆訪書記》一文中曾經寫到：“廠肆書賈，非南工即冀州，以視昔年之多爲江南人者，風氣迥乎不同。重行規，尚義氣，目能鑑別，心有輕重。”王先生這篇文章寫在壹玖伍零年，說的是解放前三、四十年間的情況。徐師傅確切的籍貫我說不清楚，但肯定是河北南宮、冀州一帶人則沒有疑問，並且也是解放前在琉璃廠學的徒，其鄉前輩“重行規，尚義氣，目能鑑別，心有輕重”這些特點，在他身上都有所繼承和體現。
 
-卖古书的人从业时间久了，单纯搞搞版刻鉴别，做到“目能鉴别，心知轻重”，应该说并不算难，特别是现在宋元乃至明初版本都很少见，日常经手的大多是明嘉靖以降的版本，鉴别起来尤其没有多大难度。难的是分辨学术流别，了解古籍的文献价值和学术价值，过去孙殿起、雷梦水辈优长于普通书商的地方正是在这一点上。卖书的人不比做学问的人，懂得什么书有学术价值是不必写文章宣扬的，他手中衡量价值的尺度就是价格，通过价格来体现书的价值。
+賣古書的人從業時間久了，單純搞搞版刻鑑別，做到“目能鑑別，心知輕重”，應該說並不算難，特別是現在宋元乃至明初版本都很少見，日常經手的大多是明嘉靖以降的版本，鑑別起來尤其沒有多大難度。難的是分辨學術流別，瞭解古籍的文獻價值和學術價值，過去孫殿起、雷夢水輩優長於普通書商的地方正是在這一點上。賣書的人不比做學問的人，懂得什麼書有學術價值是不必寫文章宣揚的，他手中衡量價值的尺度就是價格，通過價格來體現書的價值。
 
-记得大约是在１９９３年，我在海淀中国书店徐师傅那里见到一部乾嘉间原刻本清孙志祖著《家语疏证》，书仅一册，却标价高达８０元。８０元在今天固然不足道，但是当时像这样一本普通方体字清刻本，在北京往贵里说一般只是二三十元一册，８０元是普通明末刻本的价格；我在这前后也是在他那里买下的大名顶顶的康熙原版林吉人写刻《渔洋精华录》，一套四册，也不过８０元而已。除了徐元勋师傅，恐怕很少有人能给《家语疏证》定出这样高的价格，然而这却自有他的道理。《家语疏证》乃是孙志祖辨明审定《孔子家语》为伪书的辨伪名著，其对于《孔子家语》之价值，犹如阎若璩《古文尚书疏证》之于伪古文《尚书》，为研治古代学术史者所必读。而此原刻本流传稀少，并不多见，我曾核对过几家图书馆收藏的所谓原刻本，其实都是后来的翻刻本。当时我初涉此道，弄不明白他何以会定出如此高价。直到大半年后业师黄永年先生来京，命我陪侍到店里看书，一看此本大叫好书，当即指点我将其收入寒舍（此书后来因永年师以赏赐黄丕烈代古倪园沈氏刻《四妇人集》而索敝藏道光陆建瀛木犀香馆刻本《尔雅义疏》，我便一并把此书也奉呈业师藏举，被永年师收入所纂《清代版刻图录》），我这才明白个中道理。
+記得大約是在壹玖玖叄年，我在海淀中國書店徐師傅那裏見到一部乾嘉間原刻本清孫志祖著《家語疏證》，書僅一冊，卻標價高達捌拾元。捌拾元在今天固然不足道，但是當時像這樣一本普通方體字清刻本，在北京往貴裏說一般只是二三十元一冊，捌拾元是普通明末刻本的價格；我在這前後也是在他那裏買下的大名頂頂的康熙原版林吉人寫刻《漁洋精華錄》，一套四冊，也不過捌拾元而已。除了徐元勳師傅，恐怕很少有人能給《家語疏證》定出這樣高的價格，然而這卻自有他的道理。《家語疏證》乃是孫志祖辨明審定《孔子家語》爲僞書的辨僞名著，其對於《孔子家語》之價值，猶如閻若璩《古文尚書疏證》之於僞古文《尚書》，爲研治古代學術史者所必讀。而此原刻本流傳稀少，並不多見，我曾覈對過幾家圖書館收藏的所謂原刻本，其實都是後來的翻刻本。當時我初涉此道，弄不明白他何以會定出如此高價。直到大半年後業師黃永年先生來京，命我陪侍到店裏看書，一看此本大叫好書，當即指點我將其收入寒舍（此書後來因永年師以賞賜黃丕烈代古倪園沈氏刻《四婦人集》而索敝藏道光陸建瀛木犀香館刻本《爾雅義疏》，我便一併把此書也奉呈業師藏舉，被永年師收入所纂《清代版刻圖錄》），我這才明白箇中道理。
 
-这次陪侍永年师访书，永年师在徐师傅那里买下了一部日本东方文化学院在３０年代用珂罗版影印的高丽藏本《大唐西域求法高僧传》。此书一套四册，徐师傅定价２４０元，而当时买一部部头相当的普通明末刻本，如南监本和汲古阁刻《宋书》、《南齐书》、《梁书》、《陈书》、《周书》之类，价格也不过如此。书上架已近一年，却始终无人问津。一次我对他说，这书不过是一部影印本，标价未免太高，恐怕很难卖出去。徐师傅则笑笑说，这书你不懂，你老师懂，是本好书，很难得的。果然永年师一见即满脸欢喜，收入囊中，并告诉我说，这是传世《大唐西域求法高僧传》最好的一个版本，当时印行不多，传入中国的更是寥寥无几，对于研究中外交通史和唐代历史来说，都是难得的佳本，不能因为是影印本而等闲视之。后来我有机会到日本东京访书，前后跑过不下二百家旧书店，也始终没有见到此书，可知确是难得一遇，心中对徐元勋师傅和业师黄永年先生不能不逾加叹服。
+這次陪侍永年師訪書，永年師在徐師傅那裏買下了一部日本東方文化學院在叄零年代用珂羅版影印的高麗藏本《大唐西域求法高僧傳》。此書一套四冊，徐師傅定價貳佰肆拾元，而當時買一部部頭相當的普通明末刻本，如南監本和汲古閣刻《宋書》、《南齊書》、《梁書》、《陳書》、《周書》之類，價格也不過如此。書上架已近一年，卻始終無人問津。一次我對他說，這書不過是一部影印本，標價未免太高，恐怕很難賣出去。徐師傅則笑笑說，這書你不懂，你老師懂，是本好書，很難得的。果然永年師一見即滿臉歡喜，收入囊中，並告訴我說，這是傳世《大唐西域求法高僧傳》最好的一個版本，當時印行不多，傳入中國的更是寥寥無幾，對於研究中外交通史和唐代歷史來說，都是難得的佳本，不能因爲是影印本而等閒視之。後來我有機會到日本東京訪書，前後跑過不下二百家舊書店，也始終沒有見到此書，可知確是難得一遇，心中對徐元勳師傅和業師黃永年先生不能不逾加歎服。
 
-有了这样一次经历之后，我就常主动向徐元勋师傅讨教，从他那里学到许多版本目录学知识。后来国家给古旧书从业人员评定职称，徐元勋师傅成为全国为数不多的获得高级职称者之一，他很高兴地向我讲述了评定结果。以他在古籍版本目录方面的学识，这当然是受之无愧的。
+有了這樣一次經歷之後，我就常主動向徐元勳師傅討教，從他那裏學到許多版本目錄學知識。後來國家給古舊書從業人員評定職稱，徐元勳師傅成爲全國爲數不多的獲得高級職稱者之一，他很高興地向我講述了評定結果。以他在古籍版本目錄方面的學識，這當然是受之無愧的。
 
-徐元勋师傅在海淀中国书店是给国营店当伙计，替人家经管书，这与过去个人开书铺性质完全不同，不宜随便自做主张，因此不好按过去的标准看待他对顾客是不是很讲“义气”。我经济能力有限，买的书很少，且都是人家拣剩不要的滞销货，所以虽然和徐师傅很熟，却没必要让他给我预留什么好书；不过据我所知，他对有需要的老顾客和朋友，确是常常会预留出所需要的书籍的。徐师傅给我的帮助，主要是帮助我调换过几次书籍，尽管送给书店的书籍价格要远远超过换回的书籍，书店是有得无失，而我得到了自己更喜欢或者是更有用的书籍，还是要感谢徐师傅体谅读书人的情谊。如我所得清人曾燠《赏雨茅屋诗集》的嘉庆九年初刻八卷本，虽然定价仅３００元，当时还是苦于手边无钱，便用旧存康熙刻本《容斋随笔》与之易得。对于书店来说，《容斋随笔》要远比《赏雨茅屋诗集》好卖，且能卖上更好的价钱；而对于我来说，不仅通行的后刻二十二卷本《赏雨茅屋诗集》与此初刻本不同，紧接着此本之后在嘉庆十五年编刻的第二次刊本，就刊落了初刻本中的许多内容，此初刻本具有独特的文献学价值，且流传不多，得到了自然很是高兴。其实对读者的“义气”不一定是具体提供什么方便，更重要的是一种相互理解与沟通的情谊。我虽然常去看书，而且总是把书架从上到下，一翻到底，最后却很少买书，可他从不厌烦，总是笑着和我闲聊，出去上厕所或办事时还经常让我帮助照看门面，这种尊重和信任，使人温暖，也就更加愿意到店里看书。现在我能多少粗知一点古籍版本的皮毛知识，首先是要感谢业师黄永年先生的教授指点，另一方面就是得益于这几年在北京书肆上浏览古籍摸索出的实践经验。徐师傅主管海淀中国书店古籍业务期间，为我浏览古书提供了十分惬意的环境。
+徐元勳師傅在海淀中國書店是給國營店當夥計，替人家經管書，這與過去個人開書鋪性質完全不同，不宜隨便自做主張，因此不好按過去的標準看待他對顧客是不是很講“義氣”。我經濟能力有限，買的書很少，且都是人家揀剩不要的滯銷貨，所以雖然和徐師傅很熟，卻沒必要讓他給我預留什麼好書；不過據我所知，他對有需要的老顧客和朋友，確是常常會預留出所需要的書籍的。徐師傅給我的幫助，主要是幫助我調換過幾次書籍，儘管送給書店的書籍價格要遠遠超過換回的書籍，書店是有得無失，而我得到了自己更喜歡或者是更有用的書籍，還是要感謝徐師傅體諒讀書人的情誼。如我所得清人曾燠《賞雨茅屋詩集》的嘉慶九年初刻八卷本，雖然定價僅叄佰元，當時還是苦於手邊無錢，便用舊存康熙刻本《容齋隨筆》與之易得。對於書店來說，《容齋隨筆》要遠比《賞雨茅屋詩集》好賣，且能賣上更好的價錢；而對於我來說，不僅通行的後刻二十二卷本《賞雨茅屋詩集》與此初刻本不同，緊接着此本之後在嘉慶十五年編刻的第二次刊本，就刊落了初刻本中的許多內容，此初刻本具有獨特的文獻學價值，且流傳不多，得到了自然很是高興。其實對讀者的“義氣”不一定是具體提供什麼方便，更重要的是一種相互理解與溝通的情誼。我雖然常去看書，而且總是把書架從上到下，一翻到底，最後卻很少買書，可他從不厭煩，總是笑着和我閒聊，出去上廁所或辦事時還經常讓我幫助照看門面，這種尊重和信任，使人溫暖，也就更加願意到店裏看書。現在我能多少粗知一點古籍版本的皮毛知識，首先是要感謝業師黃永年先生的教授指點，另一方面就是得益於這幾年在北京書肆上瀏覽古籍摸索出的實踐經驗。徐師傅主管海淀中國書店古籍業務期間，爲我瀏覽古書提供了十分愜意的環境。
 
-徐师傅体谅和尊重读者，还体现为注意遵守执业的规矩。所谓“行规”，对读者主要是要讲信用，不能随意胡来。读者看到想要的书，让店里先单留出来，过些日子或交钱来取，或改变主意不要，由读者随意决定，这是经营古旧书的老规矩。不管是谁留书，徐师傅对此均一律恪守不爽。说到这里，我不禁想起前些年琉璃厂某书店有一位管古书的仁公，读者一留下什么书他就把书藏起来或另行卖给别人，不禁毫无信义可言，简直非夷所思，不知其是何心肠。相比之下，也就显出了人品的高下。一次我在徐师傅那里找到两册清末黎庶昌手写的《国朝名家诗选》，徐师傅一看定价仅３００元，连连说是别人帮助上架，搞错了书价。这是一批徐师傅和梁经理在四川刚刚收来的书籍，收书时徐师傅就盯上了这本书，准备卖个好价钱，不料被我拣了个便宜。尽管心里很是遗憾，但照规矩既然已经标价上架，也就只能忍痛出售，徐师傅还是按规矩把它卖给了我。
+徐師傅體諒和尊重讀者，還體現爲注意遵守執業的規矩。所謂“行規”，對讀者主要是要講信用，不能隨意胡來。讀者看到想要的書，讓店裏先單留出來，過些日子或交錢來取，或改變主意不要，由讀者隨意決定，這是經營古舊書的老規矩。不管是誰留書，徐師傅對此均一律恪守不爽。說到這裏，我不禁想起前些年琉璃廠某書店有一位管古書的仁公，讀者一留下什麼書他就把書藏起來或另行賣給別人，不禁毫無信義可言，簡直非夷所思，不知其是何心腸。相比之下，也就顯出了人品的高下。一次我在徐師傅那裏找到兩冊清末黎庶昌手寫的《國朝名家詩選》，徐師傅一看定價僅叄佰元，連連說是別人幫助上架，搞錯了書價。這是一批徐師傅和樑經理在四川剛剛收來的書籍，收書時徐師傅就盯上了這本書，準備賣個好價錢，不料被我揀了個便宜。儘管心裏很是遺憾，但照規矩既然已經標價上架，也就只能忍痛出售，徐師傅還是按規矩把它賣給了我。
 
-在海淀中国书店工作几年之后，不知是因为年龄大了，还是其他什么原因，徐元勋师傅退休了。退休后徐师傅曾在什刹海边的荷花市场开过一家旧书店，我到店里去看过他一次，他送了我一部清末什么人的诗集。这书本无关紧要，可他的生意经营得并不好，送我一部书，也是很珍重的情谊。这也是前面所说的古旧书业崇尚“义气”传统在他身上的表现。没退休时是给人家做事，当然不好拿东西随便送人。记得他书店的店名好像就是承用李文藻《琉璃厂书肆记》中提到过的陶氏“五柳居”。不过他这家店没经营多久就关张歇业了，此后则在家中收售一些古籍，偶尔也被一些书店请去临时帮助做做价。
+在海淀中國書店工作幾年之後，不知是因爲年齡大了，還是其他什麼原因，徐元勳師傅退休了。退休後徐師傅曾在什剎海邊的荷花市場開過一家舊書店，我到店裏去看過他一次，他送了我一部清末什麼人的詩集。這書本無關緊要，可他的生意經營得並不好，送我一部書，也是很珍重的情誼。這也是前面所說的古舊書業崇尚“義氣”傳統在他身上的表現。沒退休時是給人家做事，當然不好拿東西隨便送人。記得他書店的店名好像就是承用李文藻《琉璃廠書肆記》中提到過的陶氏“五柳居”。不過他這家店沒經營多久就關張歇業了，此後則在家中收售一些古籍，偶爾也被一些書店請去臨時幫助做做價。
 
-徐师傅喜欢喝一点儿酒，而酒量似乎不大。在海淀工作时，南京图书馆的版本权威沈燮元先生正住在北京图书馆，编纂全国善本书总目。沈先生一个人住在北京，闲暇时常到书店里来消磨时光，徐师傅便时或与沈先生相聚小酌，面红耳赤地共忆书林盛事。这些话就都是不可与我辈后生小子相共语的了。
+徐師傅喜歡喝一點兒酒，而酒量似乎不大。在海淀工作時，南京圖書館的版本權威沈燮元先生正住在北京圖書館，編纂全國善本書總目。沈先生一個人住在北京，閒暇時常到書店裏來消磨時光，徐師傅便時或與沈先生相聚小酌，面紅耳赤地共憶書林盛事。這些話就都是不可與我輩後生小子相共語的了。
 
-徐师傅家住在隆福寺中国书店的后面，退休后我到他家里去过两次。虽然他在家里还零星卖一点儿书，但我并不是找他买书，只是想看看他。第二次去时徐师傅一定要请我吃饭，结果到附近一起喝了些酒，他有些醉意朦胧，说要送我一部光绪刻的《亭林遗书》，供我作研究之用。这书部头较大，是能卖些钱的，而徐师傅老伴儿从来就没正式工作，家里很不宽裕，所以我不能接受，婉言谢绝了。他的这一份心意，让我很是感动。这次见面后因为工作太忙，很长时间没去看他，没想到后来就听到了他病逝的消息。
+徐師傅家住在隆福寺中國書店的後面，退休後我到他家裏去過兩次。雖然他在家裏還零星賣一點兒書，但我並不是找他買書，只是想看看他。第二次去時徐師傅一定要請我吃飯，結果到附近一起喝了些酒，他有些醉意朦朧，說要送我一部光緒刻的《亭林遺書》，供我作研究之用。這書部頭較大，是能賣些錢的，而徐師傅老伴兒從來就沒正式工作，家裏很不寬裕，所以我不能接受，婉言謝絕了。他的這一份心意，讓我很是感動。這次見面後因爲工作太忙，很長時間沒去看他，沒想到後來就聽到了他病逝的消息。
 
-古旧书业工作者对于传承学术事业，具有特殊作用，过去的文史工作者一向很重视他们的劳动，珍视与他们的交往。过去在琉璃厂曾看到过一幅前清遗老金梁为北京悦古斋古董店老板韩德盛撰写的墓志，那真是情辞并茂，神彩飞扬，动人耳目。虽然写的是古董商而非旧书商，我还是希望能在这里写出那样富有文彩的文字来。可惜拙于文辞，仅能直述对于徐元勋师傅的一些印象，作为卖书人与买书人相互交往的纪念。
+古舊書業工作者對於傳承學術事業，具有特殊作用，過去的文史工作者一向很重視他們的勞動，珍視與他們的交往。過去在琉璃廠曾看到過一幅前清遺老金樑爲北京悅古齋古董店老闆韓德盛撰寫的墓誌，那真是情辭並茂，神彩飛揚，動人耳目。雖然寫的是古董商而非舊書商，我還是希望能在這裏寫出那樣富有文彩的文字來。可惜拙於文辭，僅能直述對於徐元勳師傅的一些印象，作爲賣書人與買書人相互交往的紀念。
 
-文|辛德勇，２０００年７月２３日记于京西未亥书室
+---
+
+文|辛德勇，貳零零零年柒月貳拾叄日記於京西未亥書室
