--- a/content/post/20200330将hugo日期转化为中文格式.md
+++ b/content/post/20200330将hugo日期转化为中文格式.md
@@ -24,13 +24,13 @@ keywords = ["hugo"]
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200330163927.png" >}}
 
-今天，无意看到hugo的一个[Data Folder功能](https://gohugo.io/templates/data-templates/#the-data-folder)。大呼救星来也。
+今天，无意看到hugo的一个[Data Templates功能](https://gohugo.io/templates/data-templates/)。大呼救星来也。
 
 >The data folder is where you can store additional data for Hugo to use when generating your site. Data files aren’t used to generate standalone pages; rather, they’re meant to be supplemental to content files. This feature can extend the content in case your front matter fields grow out of control. Or perhaps you want to show a larger dataset in a template (see example below). In both cases, it’s a good idea to outsource the data in their own files.
 >
 >These files must be YAML, JSON, or TOML files (using the .yml, .yaml, .json, or .toml extension). The data will be accessible as a map in the .Site.Data variable.
 
-所以在根目录的data目录下新建一个json文件（官方声明支持yaml、yml、toml、json格式），输入如下内容：
+所以在根目录的Data目录下新建一个名为`chinese_date.json`的数据文件（官方声明支持yaml、yml、toml、json格式），输入如下内容：
 ```json
 {
   "year":
@@ -116,4 +116,4 @@ keywords = ["hugo"]
 
 《[賣書人徐元勳]({{< relref "20190127卖书人徐元勋.md" >}}) 》
 
-如此，倘若有闲心的话，完全可以整一个天干地支纪年日期出来。
+如此，倘若有闲心的话，完全可以整一个天干地支纪年出来。
