--- a/content/post/20070417拖富先生.md
+++ b/content/post/20070417拖富先生.md
@@ -2,13 +2,13 @@
 title= "拖富先生"
 date= 2007-04-17T13:41:02+08:00
 type = "post"
-categories = ["电影"]
+categories = ["琐记"]
 comments = false
 reward = false
 mathjax = false
-slug = "Mr poor"
+slug = "Mr. poor"
 keywords = ["随笔"]
-tags = ["电影"]
+tags = ["速写"]
 +++
 近期除了梁芷珊，就是方树梁@好人有限。他很灵，给钟爱的傅佩嘉谱过首谐趣的词，叫，拖肥(toffee)先生。写某少女，嫌男友太犀利，却迟迟不舍将其赐死，藕断丝连，最惨无过闷到肠胃、伤到身心。捱多一天、瘦多一寸。一按心，“明明，明天一刀；雨断，断得到至奇，奇”，极好玩。
 <!--more-->
