--- a/content/post/20190127卖书人徐元勋.md
+++ b/content/post/20190127卖书人徐元勋.md
@@ -4,7 +4,9 @@ categories = ["文史"]
 type = "post"
 vertical = true
 mathjax = false
-tags = ["藏书","旧书"]
+reward = false
+slug = "Bookseller Yuanxun Xu"
+tags = ["转载"]
 date= 2019-01-27T09:47:06+08:00
 +++
 徐元勳是中國書店一位賣古舊書的老師傅，去年去世了。得知他去世的消息，就想寫一點東西。在我的眼裏，他就是清人李文藻在《琉璃廠書肆記》裏提到的那種“頗深於書”的賣書人。
