--- a/content/post/20190311善变.md
+++ b/content/post/20190311善变.md
@@ -4,7 +4,10 @@ date= 2019-03-11T17:17:34+08:00
 mathjax = false
 draft = false
 type = "post"
-categories = ["文史"]
+slug = "capricious"
+categories = ["琐记"]
+tags = ["速写"]
+keywords = ["群晖","数据备份"]
 +++
 {{<img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/2019-03-11-091357.png" alt="">}}
 
