--- a/content/post/20190313北方的河流.md
+++ b/content/post/20190313北方的河流.md
@@ -1,14 +1,16 @@
 +++
 title= "北方的河流"
 date= 2019-03-13T12:32:34+08:00
+type = "post"
 mathjax = false
 aplayer = true
+slug = "river in north"
 categories = ["音乐"]
 tags =["森田童子","马骅"]
+keywords =["森田童子","马骅"]
 +++
-
 香港诗人廖伟堂在森田童子去世后，评论她的气质与九十年代迥异，更别说二十一世纪了，她是彻头彻尾属于1960/1970的日本“安保世代”的一员，说是该世代最后的图腾也不为过，他回忆道：
-
+<!--more-->
 >我曾经以为，森田童子的音乐风格来源自70年代的迷幻民谣和后朋克，诗人歌手Leonard Cohen与Nick Drake式沉郁的喃喃吟唱丶Nico式高处不胜寒的冷冽嗓音都收纳在她的黑暗中，所以痛彻心扉。
 >
 >但事实上导致这种冷的，主要是歌曲主题与歌词本身的绝望感，是我们联想到的大时代背景下、理想主义退潮的彷徨。
