--- a/content/post/20190418重拾中州韵.md
+++ b/content/post/20190418重拾中州韵.md
@@ -12,7 +12,7 @@ codes = ["yaml","bash"]
 slug = "the best chinese input method Squirrel"
 keywords = ["Squirrel","输入法","鼠须管","中州韵"]
 +++
-曾几何时，Win 7刚开始风靡时，本人的主力码字工具还是佛振开发的开源输入法[Rime](https://rime.im/)。Windows和Mac平台各有一个开发代号，分别叫「小狼毫」、「鼠须管」，当时觉得这个名字又风又雅，因为借了欧阳修《奉送原甫侍读出守永兴》的典故。
+Win 7刚开始风靡时，本人的主力码字工具还是佛振开发的开源输入法[Rime](https://rime.im/)。Windows和Mac平台各有一个开发代号，分别叫「小狼毫」、「鼠须管」，当时觉得这个名字又风又雅，因为借了欧阳修《奉送原甫侍读出守永兴》的典故。
 
 >鱼枕蕉，一举十分当覆盏。
 鼠须管，为物虽微情不浅。
@@ -25,9 +25,9 @@ keywords = ["Squirrel","输入法","鼠须管","中州韵"]
 >
 >Rime默认提供了两个拼音输入法「朙（míng）月拼音」和「地球拼音」，两者都可以输入准确的繁体和简体，而且「地球拼音」还支持声调输入。Rime还支持了许多种方言拼音，如吴语、粤语，甚至中古汉语。
 
-由于作者佛振精力有限，对版本维护难以周全，Rime项目自2014年12月23日开始一度停滞更新。自己因为转战Window，嫌弃小狼毫颜值不高，与这款输入法也是渐行渐远，不经意间，发现自己投奔了搜狗输入法的阵营。
+由于作者佛振精力有限，对版本维护难以周全，Rime项目在2014年12月23日后相当长一段一度停滞更新。自己因为转战Window，嫌弃小狼毫颜值不高，与这款输入法也是渐行渐远，不经意间，发现自己投奔了搜狗输入法的阵营。
 
-4年1个月零10天后，自己转战macOS，但对市面上主流输入法始终不满意，一次偶然的机会，发现万年蛰伏的鼠须管竟然更新到了0.10.0，而且折半年来更新频繁。果断删除了盗取隐私的搜狗，兜兜转转再次回到了原点，下面记述一下部署经过。
+4年1个月10天后，自己转战macOS，但对市面上主流输入法始终不满意，一次偶然的机会，发现万年蛰伏的鼠须管竟然更新到了0.10.0，而且折半年来更新频繁。果断删除了盗取隐私的搜狗，兜兜转转再次回到了原点，下面记述一下部署经过。
 
 ## 删除搜狗系列
 为了彻底删除搜狗家族，建议在终端操作：
@@ -84,10 +84,10 @@ $ brew cask install squirrel
 - [码农伯伯的rime词库][l4]: 对alswl的词库可以进行补充。
 - [lippmann的rime词库][l5]：自然码双拼」、带辅码的「自然码 2000」 和「nihongo-r」日语输入方案。
 - [placeless的鼠须管小鹤双拼配置][l6]：小鹤双拼版本，作者针对双拼做了适度优化。
-- [xhup小鹤音形方案][17]：小鹤音形成套方案，三种输入方式。
-- [KyleBing的鼠须管极点五笔配置][l8]: 86极点五笔版本，作者全盘吸收了window版的极点五笔词库，做了适度精简。
+- [xhup小鹤音形方案][l7]：小鹤音形成套方案，三种输入方式。
+- [KyleBing的鼠须管极点五笔配置][l8]: 86极点五笔版本，作者全盘吸收了window版的极点五笔词库，做了适度精简，而且改造出很多小功能，如自造词、一键繁简转换、一键切换大小写数字等。
 - [polyhedron维护的多语种码表][l9]: 涵盖阿拉伯文、梵文、希腊文、缅甸文、蒙古文、满文、藏文等近20个小语种的编码方案
-- [scomper的配置方案][20]: 比较成熟的开箱即用配置方案，推荐新手使用。
+- [scomper的配置方案][l10]: 比较成熟的开箱即用配置方案，推荐新手使用。
 
 注意：在覆盖默认配置文件之前，建议先备份一下配置文件，以防制后续折腾挂了可以轻易还原。
 
@@ -95,39 +95,30 @@ $ brew cask install squirrel
  $ cp -a ~/Library/Rime ~/Library/Rime_ori_$(date +%Y%m%d%H%M%S)
 ```
 
-覆盖后点击屏幕右上角 => 鼠须管 => 重新部署，成功后会出现提示：
+覆盖后点击屏幕右上角 => 鼠须管 => 重新部署，成功后会出现提示成功。
 
-{{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20190418120835.jpg" >}}
 
 本人目前的输入方案：
 
 ```yaml
   schema_list:
-  - schema: luna_pinyin            # 朙月拼音
-#  - schema: luna_pinyin_fluency   # 语句流
-# - schema: double_pinyin          # 自然碼雙拼
-  - schema: wubi_pinyin            # 五笔拼音混合輸入
-  - schema: terra_pinyin           # 地球拼音
-  - schema: xhup                   # 小鹤音形
-# - schema: wubi86                 # 五笔86,增加简繁转换
-  - schema: wubi86_jidian          # 极点五笔,增加简繁转换
-#  - schema: wubi98                # 98五笔,增加简繁转换
-  - schema: muddy-pinyin           # 泥巴拼音查询
-  - schema: pinyin-ext             # 拼音声调扩展
-#  - schema: chemistry             # 化学方程式
-#  - schema: logic_symbols         # 逻辑符号输入辅助
-#  - schema: bopomofo_symbols      # 注音符号输入辅助
-#  - schema: jp_sela               # sela假名+汉字日语输入法
-#  - schema: kunyomi               # 日语汉字训读
-#  - schema: kana                  # kana日语
-#  - schema: wubi06                # 新世纪五笔
-#  - schema: double_pinyin_flypy   # 小鹤雙拼
-  - schema: nihongo-r              # 日语平文式罗马输入方案
+   - schema: wubi86_jidian          # 极点五笔,增加简繁转换
+   - schema: numbers              	# 五笔大写数字快捷切换
+#  - schema: muddy-pinyin           # 泥巴拼音查询
+   - schema: xxm              	  	# 小兮码
+   - schema: lyzm             	  	# 龙渊郑码
+   - schema: pinyin-ext             # 拼音声调扩展
+   - schema: luyinxing	            # Lu音形
+#  - schema: xhup                   # 小鹤音形
+#  - schema: chemistry              # 化学方程式
+#  - schema: logic_symbols          # 逻辑符号输入辅助
+#  - schema: bopomofo_symbols       # 注音符号输入辅助
+#  - schema: jp_sela                # sela假名+汉字日语输入法
+#  - schema: kunyomi                # 日语汉字训读
+#  - schema: kana                   # kana日语
+   - schema: nihongo-r              # 日语平文式罗马输入方案
 #  - schema: wugniu_gninpou         # 吴语宁波话（宁波城区）
-#  - schema: wugniu_gninyu_tsonkonmiau        # 吴语宁波话（鄞县钟公庙口音）
-#  - schema: english                # 英文输入法
 #  - schema: zyenpheng              # 中古三拼
-
 ```
 
 备注：schema_list支持两种写法，这两种写法是等价的
@@ -174,7 +165,6 @@ import_tables:
   - luna_pinyin.emoji.scomper     #scomper颜文字
   - luna_pinyin.movie    #电影词汇精选
   - luna_pinyin.music    #音乐词汇精选
-
 ```
 
 ## 功能键码注释
@@ -187,7 +177,7 @@ default.custom.yaml可自定义的功能按鍵有 Caps\_Lock, Shift\_L, Shift\_R
 - clear 输入一段字符后按此键，字符被清除，同时切换为英文输入模式
 
 ## 自定义界面配色
-鼠须管输入法的皮肤配色配置方案位于 squirrel.custom.yaml 配置文件中，官方也提供了一些皮肤外观配置，详见 [squirrel.yaml][21]。这里也提供本人的配色方案：
+鼠须管输入法的皮肤配色配置方案位于 squirrel.custom.yaml 配置文件中，官方也提供了一些皮肤外观配置，详见 [squirrel.yaml][l11]。这里也提供本人的配色方案：
 
 ```yaml
 patch:
@@ -242,7 +232,7 @@ patch:
       comment_text_color: 0xDDDDDD
       label_font_face: "Lucida Grande"
 
-# 应用程序的初始切换状态...目前已改用强大的hammerspoon的AutoIMESetting脚本（打算同lbrime-lua、librime-octagram一起另外撰文介绍Rime的辅助工具）
+# 应用程序的初始切换状态...目前已改用强大的hammerspoon的AutoIMESetting脚本
 # Mac下可通过这条命令来查找程序ID名称：osascript -e 'id of app "Application_Name"'
   "com.runningwithcrayons.Alfred-3/ascii_mode": true
   "app_options/com.apple.dt.Xcode": true
@@ -270,7 +260,7 @@ patch:
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20190418214806.png" >}}
 
 ## 自定义快捷字符
-如果日常输入需要用到大量快捷字符，可以配置字符。在中文输入法状态下可以直接输入 /dn 、/fs、/bq等，快捷地调出特殊符号；这些字符的配置保存在luna_pinyin_simp.custom.yaml 的 punctuator 配置中，具体见这个[gist][22]。
+如果日常输入需要用到大量快捷字符，可以配置字符。在中文输入法状态下可以直接输入 /dn 、/fs、/bq等，快捷地调出特殊符号；这些字符的配置保存在luna_pinyin_simp.custom.yaml 的 punctuator 配置中，具体见这个[gist][l12]。
 
 想自己DIY制作词库的，可以看这篇文章 [Rime输入法—鼠须管(Squirrel)词库添加及配置](https://www.jianshu.com/p/cffc0ea094a7)。
 
@@ -285,15 +275,15 @@ patch:
 [^1]: [推薦一個神級輸入法——Rime](https://www.byvoid.com/zht/blog/recommend-rime)
 [^2]: [如何卸载rime](https://github.com/rime/home/wiki/FAQ)
 
-[l1]: https://github.com/mritd/rime
+[l1]: https://github.com/mritd/rime/tree/master/iMac-Home
 [l2]: https://github.com/alswl/Rime
 [l3]: https://github.com/JackChen007/myRimeCfg
 [l4]: https://gitee.com/stdenv/rime-settings/tree/master
-[l5]: (https://github.com/lippmann/lrime)
+[l5]: https://github.com/lippmann/lrime
 [l6]: https://github.com/placeless/squirrel_config
-[17]: https://github.com/brglng/rime-xhup
+[l7]: https://github.com/brglng/rime-xhup
 [l8]: https://github.com/KyleBing/rime-wubi86-jidan
 [l9]: https://github.com/biopolyhedron/rime_schemata
-[20]: https://github.com/scomper/Rime
-[21]: https://github.com/rime/squirrel/blob/master/data/squirrel.yaml#L106
-[22]: https://gist.githubusercontent.com/WithdewHua/ce9b1dc076b191feb6e6a9ec669f71cd/raw/322a1c7bc196606301b49c0688d31fbeea9f5da1/symbols.custom.yaml
+[l10]: https://github.com/scomper/Rime
+[l11]: https://github.com/rime/squirrel/blob/master/data/squirrel.yaml#L106
+[l12]: https://gist.githubusercontent.com/WithdewHua/ce9b1dc076b191feb6e6a9ec669f71cd/raw/322a1c7bc196606301b49c0688d31fbeea9f5da1/symbols.custom.yaml
