--- a/content/post/20190328假如最高法是一个产品经理.md
+++ b/content/post/20190328假如最高法是一个产品经理.md
@@ -12,7 +12,7 @@ description = "中国婚姻法近70年的变迁"
 +++
 最近在整理婚姻法与夫妻债务的一些案例，发现2017、2018是个微妙的时间区段，最高法及地方高院围绕夫妻债务频繁出各种通知、解释，包括但不限于以下文件。
 
--  [《最高法关于适用<中华人民共和国婚姻法>若干问题的解释（二）的补充规定》][b1]
+-  [《最高院关于适用《中华人民共和国婚姻法》若干问题的解释（二）的补充规定》][b1]
 - [《最高人民法院关于依法妥善审理涉及夫妻债务案件有关问题的通知》][b2]
 - [《最高人民法院关于审理涉及夫妻债务纠纷案件适用法律有关问题的解释》][b3]
 - [《最高人民法院关于办理涉夫妻债务纠纷案件有关工作的通知》][b4]
