--- a/content/post/20200301将闲置ECS改造成anki服务器.md
+++ b/content/post/20200301将闲置ECS改造成anki服务器.md
@@ -12,7 +12,6 @@ comments = false
 keywords = ["阿里云","anki","SSH","anki-sync-server"]
 tags = ["Anki"]
 +++
-
 早前写了篇将本地机子转化为hugo本地服务器的心得：[《如何给iPhone快速安排上Mac制作的anki牌组》]({{<  relref  "post/20200223如何给你的iPhone快速安排上Mac制作的牌组.md" >}})，但此乃权宜之计，尽管可以提升速率，但代价是牺牲了效率，「治标不治本」。假想建一个能像anki稳定的端对端的同步服务器，方便又快捷，该多好。
 
 Anki的官方服务器坐标在德国，由于周知的缘故，下行速度不太理想，不说大容积的牌组，就是数量可观的小容积文件，也够Anki喝一壶的了。且据网友反馈，anki是不提供超过250MB的牌组的同步服务，然而anki很多影音牌组都是以G来论的。
@@ -72,37 +71,7 @@ $ cp /usr/lib/python2.7/dist-packages/AnkiServer-2.0.6-py2.7.egg/examples/exampl
 $ vi production.ini
 ```
 
-
-```json
-[server:main]
-use = egg:AnkiServer#server
-host = x.x.x.x //x.x.x.x为云主机的内网IP，见云主机管理界面
-port = 27701 //建议不要随意改该端口
-
-[filter-app:main]
-use = egg:Paste#translogger
-next = real
-
-[app:real]
-use = egg:Paste#urlmap
-/ = rest_app
-/msync = sync_app
-/sync = sync_app
-
-[app:rest_app]
-use = egg:AnkiServer#rest_app
-data_root = ./collections
-allowed_hosts = 0.0.0.0 //0.0.0.0表示允许任何ip访问该服务器
-;logging.config_file = logging.conf
-
-[app:sync_app]
-use = egg:AnkiServer#sync_app
-data_root = ./collections
-base_url = /sync/
-base_media_url = /msync/
-session_db_path = ./session.db
-auth_db_path = ./auth.db
-```
+{{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200331145140.png" alt="配置图示">}}
 
 保存后，开始添加用户，这里添加的用户是将来在Anki客户端登录时使用的用户，使用以下指令添加用户，然后输入对应的密码。
 
@@ -198,19 +167,7 @@ http://yourhost:27701/msync //http开头，而非https
 
 然后按需修改配置文件：
 
-```bash
-[root@host anki-bundled]# cd ..
-[root@host anki-sync-server]# vi ankisyncd.conf
-[sync_app]
-host = 0.0.0.0 #如果你不想让该服务器对外公开的话，可以将host改成127.0.0.1，一般不需要修改
-port = 27701
-data_root = ../collections
-base_url = /sync/
-base_media_url = /msync/
-auth_db_path = ./auth.db
-# optional, for session persistence between restarts
-session_db_path = ../session.db #这里是我的版本迁移设置，你可以不改。
-```
+{{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200331145307.png" alt="配置图示">}}
 
 没问题的话就可以创建新用户了，创建完毕后可以用lsuser命令察看结果：
 
