--- a/content/post/20200329阻止Anki“自黑”的正确姿势.md
+++ b/content/post/20200329阻止Anki“自黑”的正确姿势.md
@@ -62,7 +62,7 @@ $ defaults delete  net.ankiweb.dtop  NSRequiresAquaSystemAppearance
 
 最终，Anki的作者Damien Elmes给出了最正确且最简单的官方答案：<font color="red">重新下载</font>
 
->When using macOS in dark mode, recent Anki versions will automatically switch to night mode. If you want to force Anki to use light mode while using the rest of your system in dark mode, please install [Anki 2.1.21beta3](https://github.com/ankitects/anki/releases/download/2.1.23/anki-2.1.23-mac-alternate.dmg) or later, and install the -alternate version rather than the -standard one.[^3]
+>When using macOS in dark mode, recent Anki versions will automatically switch to night mode. If you want to force Anki to use light mode while using the rest of your system in dark mode, please install [Anki 2.1.21beta3 or later](https://github.com/ankitects/anki/releases/download/2.1.23/anki-2.1.23-mac-alternate.dmg), and install the -alternate version rather than the -standard one.[^3]
 
 [^1]: [MacPro为知笔记关闭黑暗模式](https://www.jianshu.com/p/5cce163d352e)
 
