--- a/content/post/20190707为你的zsh安装翻墙弹椅.md
+++ b/content/post/20190707为你的zsh安装翻墙弹椅.md
@@ -1,9 +1,9 @@
 +++
-title= "翻墙弹椅"
+title= "给zsh来把翻墙弹椅"
 date= 2019-07-07T14:38:34+08:00
 type = "post"
 categories = ["技术"]
-draft = true
+draft = false
 toc = true
 comments = false
 reward = true
@@ -11,6 +11,7 @@ mathjax = false
 codes = ["bash"]
 slug = "config zsh with proxy"
 keywords = ["pyenv","iterm","zsh","proxy"]
+
 +++
 起因是要安装一个基于Python的命令行工具[gitsome](https://github.com/donnemartin/gitsome)。过程相当傻瓜，利用 pip 即可一步安装：
 ```bash
@@ -56,6 +57,7 @@ pyenv install 3.7.3
 既然如此，给终端来一把翻墙弹椅吧。
 
 ## 为zsh配置socks代理开关
+
 由于有现成的[ShadowsocksX-NG-R](https://github.com/wzdnzd/ShadowsocksX-NG-R)，只需要挖掘一个代理端口即可。
 
 修改zsh设置文件
