--- a/content/post/20200331让iTerm2实时显示梯子状态.md
+++ b/content/post/20200331让iTerm2实时显示梯子状态.md
@@ -89,15 +89,15 @@ function iterm2_print_user_vars() {
 
 ## 方案三：proxychains
 
-但在实际应用中，由于经常在clashX与v2rayu之间切换，pp经常不是特别灵光，于是我又加了第三重保险proxychians-ng[^4]：
+但在实际应用中，由于经常在clashX与v2rayu之间切换，pp经常不是特别灵光，于是又加了第三重保险：proxychians-ng[^4]：
 
 ```bash
 $ brew install proxychains-ng
 ```
 proxychains-ng默认配置文件名为`proxychains.conf`。
 
-* 通过源代码编译安装的默认为`/etc/proxychains.conf`。
-* Mac下用Homebrew安装的默认为`/usr/local/etc/proxychains.conf`。
+* 通过源代码编译安装的默认为  /etc/proxychains.conf
+* Mac下用Homebrew安装的默认为 /usr/local/etc/proxychains.conf
 
 ```bash
 $ vi /usr/local/etc/proxychains.conf
