updated some posts

--- a/content/post/20190712chrome 76开启深色模式适配.md
+++ b/content/post/20190712chrome 76开启深色模式适配.md
@@ -86,7 +86,7 @@ if (matchMedia('(prefers-color-scheme: dark)').matches) {
 <link rel="stylesheet" href="https://unpkg.com/gutenberg-css@0.4/dist/themes/oldstyle.min.css" media="print">
 ```
 
-upadted:20200309，本站已成功启用暗黑主题适配，但一键切换的功能模块与暗黑主题尚不能完美融合，即夜间进入暗黑模式后,toggletheme功能会失效，该问题等空了再想办法修复。
+后记：本站已成功启用暗黑主题适配，但一键临时深色功能模块与暗黑主题尚不能完美融合，亦即夜间进入暗黑模式后，toggletheme功能会失效，该问题等空了再想办法修复。
 
 
 [^1]: [Chrome Platform Status Feature44 milestone=76](https://www.chromestatus.com/features#milestone%3D76)
