--- a/content/post/20061118重阳.md
+++ b/content/post/20061118重阳.md
@@ -12,7 +12,10 @@ tags = ["速写"]
 +++
 重阳节不可少菊，在看周瘦鹃先生的《花木丛中》，这老头是个美食家，苏州的家常菜他随便烧，什么炒头刀韭菜、清炒蚕豆、荠菜炒肉丝、酱麻油拌香乾马兰头，别人想吃还吃不到。他更是个爱花如命的姑苏人。一听给花起来的名字就文绉绉的，如碧玉如意、春水横波等。
 
-他讲有次不幸，园子里的菊花吃了铁鸟下的蛋（日本人掷下的炸弹），全菊覆没，“到了秋天，就连一朵平凡的菊花都没有，这没有菊花的秋天，实在过得太寂寞、太无聊了”。
+他讲有次不幸，园子里的菊花吃了铁鸟下的蛋（日本人掷下的炸弹），全菊覆没。
+
+>“到了秋天，就连一朵平凡的菊花都没有，这没有菊花的秋天，实在过得太寂寞、太无聊了”。
+
 <!--more-->
 我们这辈人大概再也体会不到前人安逸的快乐，也没见过现在还有谁会像汪老爷那样写出“葡萄的卷须有一点淡淡的甜味。这东西如果腌成咸菜，大概不难吃。”
 
