--- a/content/post/20200223如何快速导入Mac制作的anki牌组.md
+++ b/content/post/20200223如何快速导入Mac制作的anki牌组.md
@@ -1,5 +1,5 @@
 +++
-title= "如何给你的iPhone快速安排上Mac制作的anki牌组"
+title= "如何快速导入Mac制作的anki牌组"
 date= 2020-02-22T09:42:20+08:00
 type = "post"
 categories = ["技术"]
@@ -93,10 +93,8 @@ $ python -m http.server  8888
 
 在终端界面中按下 `ctrl+c` 停止
 
-
-
-{{% notice note %}}
-20201104更新：升级到iOS14后发现直接airdrop给iPhone即可，系统默认由anki直接导入akpg文件。故，以上仅供存档。
+{{% notice tip %}}
+20201104更新：手机升级到iOS14及以上版本后，发现Mac端直接airdrop给iPhone即可，系统默认打开anki直接导入akpg文件。故以上仅供存档。
 {{% /notice %}}
 
 
