--- a/content/post/20220228这是人们会说起的一年.md
+++ b/content/post/20220228这是人们会说起的一年.md
@@ -20,9 +20,11 @@ tags = ["转载"]
 
 即使在荒原般的生活境况下，阿富汗人民依然有日常生活，少年醉心于他们的追风筝游戏，青年沉浸于他们的爱情，妇女在匮乏中生育，男人在艰难中谋生。然而，在这日常生活之间，回旋的是战乱、动荡、恐惧和匮乏。这些特异的存在境况，如同黑色之鸟飞翔在阿富汗人的头顶，构成他们独特而残酷的生存背景。
 
-这一年，世界风起云涌，但每个乌克兰人都已对此习以为常。看了战区的零星视频，仿佛一切都很安静，枪声在远处，晚上仍然可以安睡，只是需要将床放在铸铁浴缸的底部，这样，如果炮弹击中公寓，你还有更好的机会存活下来，不至于受伤。
+这一年，世界风起云涌，但每个乌克兰人都已对此习以为常。所有的战区视频里，仿佛枪声与战场皆在远方，一切都很安静，晚上仍然可以睡得安详，只是需要将床放在铸铁浴缸的底部，这样，如果炮弹击中公寓，你还有更好的机会存活下来，不至于受伤。
 
 城市的街道空得像月球，只有军车在街上驶过。
+
+这是人们会说起的一年。
 
 <!--more-->
 
@@ -36,19 +38,7 @@ tags = ["转载"]
 大地不再生产，它吞噬。<br>
 天空不下雨，只下铁。<br><br>
 
-作者 / [德国] 布莱希特，1940<br>
+作者 / [德国] 布莱希特(Berthold Brecht)，1940<br>
 翻译 / 黄灿然
 
 {{< /quote >}}
-
-
-Das ist dieses Jahr, von dem man reden wird<br>
-Das ist dieses Jahr, von dem man schweigen wird.<br><br>
-
-Die Alten sehen die Jungen Sterben.<br>
-Die Toerichten sehen die Weisen sterben.<br><br>
-
-Die Erde traegt nicht mehr, aber sie schluckt.<br>
-Der Himmel wirft keinen Regen, sondern nur Eisen.<br><br>
-
-Berthold Brecht, 1940
