--- a/content/post/20220228这是人们会说起的一年.md
+++ b/content/post/20220228这是人们会说起的一年.md
@@ -9,7 +9,7 @@ aplayer = false
 mathjax = false
 slug = "A Special Year"
 keywords = ["诗歌","文学"]
-tags = ["转载"]
+tags = ["诗歌","乌克兰","阿富汗"]
 +++
 
 > 「如果你从沙里诺区走到卡德帕湾区去买地毯，就算你能通过所有的关卡，也得冒着被狙击手枪杀或者被火箭炮炸飞的危险。」
