--- a/content/post/20190404WebP部署那些事儿.md
+++ b/content/post/20190404WebP部署那些事儿.md
@@ -30,7 +30,7 @@ keywords = ["hugo","WebP"]
 
 ## 图片样式配置
 
-打开阿里云OSS设置，在当前活跃的bucket创建一个样式，通过`基本编辑`的GUI界面设置好样式，记住`规则名称`：
+打开阿里云OSS设置，在当前活跃的bucket下选择菜单：`数据处理与索引`—>`图片处理``—>`新建样式`，通过`基本编辑`的GUI界面设置好样式，记住`规则名称`：
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20190404120751.jpg" >}}
 
 也可以在`高级编辑`里输入`规则名称`和如下样式代码：
@@ -110,7 +110,7 @@ OK，打完收工。
 </picture>
 ```
 
-既然w3编委会说[html中的\<picture\>元素能够与\<figure\>无缝融合][l9]，那就新建一个万能的shortcode，来替代上述这段html的功能吧。
+既然w3编委会说[html中的picture元素能够与figure无缝融合][l9]，那就新建一个万能的shortcode，来替代上述这段html的功能吧。
 
 ```php
 <figure><picture {{ with .Get "class" }}class="{{.}}"{{ end }}>
