--- a/content/post/20220420悲伤日记.md
+++ b/content/post/20220420悲伤日记.md
@@ -8,8 +8,8 @@ reward = false
 aplayer = false
 mathjax = false
 slug = "The Moped Diaries"
-keywords = ["新冠","上海"]
-tags = ["新冠","上海"]
+keywords = ["白描","上海"]
+tags = ["白描","上海"]
 +++
 
 <div align="center">一</div>
@@ -26,27 +26,35 @@ tags = ["新冠","上海"]
 
 我们围着铁窗看着尸体，就像大学时期看的《伴我同行》，那么多年过去了，它激起的涟漪依然在。
 
-via陈杏虎
+via 陈杏虎
 
 <div align="center">二</div>
 
 早晨小区内，一位耄耋老人坠楼自尽，我被一阵猛烈又悲怆的女性哭喊场从睡梦中抓起来，老人面对抗原自测的两条杠，心里压力太大，不堪重负，最后一部黑色的车把老人拉走，他女儿一个人在后面追着车跑，哭得很惨，脚步逐渐乏力，很多人打开窗户看着，但所有人都没有办法做什么，沉默融进悲伤的空气，很窒息。
 
-via喂我在西单
+via 喂我在西单
 
 <div align="center">三</div>
 
-中国人就是忍一辈子，从楼上跳下去的时候，自己也以为是自杀。
+外婆在电话里问上海天气好吗？我说“外面阳光很好，可惜我出不去”。
 
-via木藤西西
+ via 同上
 
 <div align="center">四</div>
 
-昨晚紧急通知全校核酸，出教学楼时路上全是去检测点的人。忽然旁边有个男生加快脚步，连带着周遭人都不约而同迅捷起来。黑暗中，四下的陌生人都戴着口罩开始冲刺。看完诗我后知后觉地想：许多浪漫已注定无法身体力行，可她的诗性仍旧真诚而青春，年轻心脏的知觉，分外令人触动。 via 安东尼蒂
+昨晚紧急通知全校核酸，出教学楼时路上全是去检测点的人。忽然旁边有个男生加快脚步，连带着周遭人都不约而同迅捷起来。黑暗中，四下的陌生人都戴着口罩开始冲刺。看完诗我后知后觉地想：许多浪漫已注定无法身体力行，可她的诗性仍旧真诚而青春，年轻心脏的知觉，分外令人触动。
+
+via 安东尼蒂
+
 
 <div align="center">五</div>
 
-外婆在电话里问上海天气好吗？我说“外面阳光很好 可惜我出不去”。
+温柔之必要，肯定之必要，
 
- via喂我在西单
+一点点酒和木樨花之必要，正正经经看一名女子走过之必要
 
+而既被目为一条河总得继续流下去，世界老这样总这样：
+
+观音在远远的山上，罂粟在罂粟的田里
+
+via 瘂弦 《如歌的行板 》
