--- a/content/post/20220418无痛的集中营.md
+++ b/content/post/20220418无痛的集中营.md
@@ -7,7 +7,7 @@ comments = false
 reward = true
 aplayer = false
 mathjax = false
-slug = "A Special Year"
+slug = "painless concentration camp"
 keywords = ["诗歌","文学"]
 tags = ["诗歌","黄灿然"]
 +++
