--- a/content/post/20220418无痛的集中营.md
+++ b/content/post/20220418无痛的集中营.md
@@ -25,8 +25,7 @@ tags = ["诗歌","黄灿然"]
 这样人们实际上将失去他们的自由，却又相当享受，<br>
 因为宣传或洗脑，或被药理学方法所加强的洗脑，<br>
 将会分散他们任何想反抗的欲望。<br>
-这似乎就是最后的革命。<br>
-天空不下雨，只下铁。<br><br>
+这似乎就是最后的革命。<br><br>
  
 （黄灿然 草译）
 
