--- a/content/post/20190416儿子的人生第一份自荐.md
+++ b/content/post/20190416儿子的人生第一份自荐.md
@@ -3,11 +3,11 @@ title= "儿子的人生第一份自荐"
 date= 2019-04-16T00:52:17+08:00
 type = "post"
 categories = ["琐记"]
-draft = false
+draft = true
 comments = false
 reward = true
 mathjax = false
-slug = "first CV in life"
+slug = "first CV in his life"
 
 +++
 一觉醒来，本埠四大“民校”齐齐发声，公布了2019年各自的幼升小招生简章，吓得爹娘们灰头土面、如临大敌。
@@ -16,7 +16,7 @@ slug = "first CV in life"
 
 <!--more-->
 
-姓x，名yy，借典陶渊明《杂诗》“猛志逸四海，骞翮思远翥”。
+姓xx，名xx，借典陶渊明《杂诗》。
 
 姓名复杂，性格简单。开怀其内，开朗其外；娘胎预装“自来熟”系统，不熟不要钱；臭美，自封班级第二帅，第一长年空缺；
 
