不日常更新

--- a/content/post/20070317为什么.md
+++ b/content/post/20070317为什么.md
@@ -6,7 +6,7 @@ categories = ["琐记"]
 comments = false
 reward = false
 mathjax = false
-slug = "ashore"
+slug = "kill time"
 keywords = ["随笔","矢部美穗"]
 tags = ["速写"]
 +++
