first update in new year

--- a/content/post/20190404WebP部署那些事儿.md
+++ b/content/post/20190404WebP部署那些事儿.md
@@ -134,7 +134,12 @@ OK，打完收工。
 
 {{</* img src="" alt="" */>}} 甚至 {{</* img src="" */>}}
 
-还是觉得手动输入麻烦？ 没问题，直接在picGO里自定义快捷方式，鼠标轻松一点即搞定。
+还是觉得手动输入麻烦？ 没问题，直接在picGO里自定义链接格式，鼠标轻松一点即搞定。
+
+```
+{{</* img src="$url"  */>}}
+
+```
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20190405221724.jpg" >}}
 
