--- a/content/post/20220418无痛的集中营.md
+++ b/content/post/20220418无痛的集中营.md
@@ -12,7 +12,7 @@ keywords = ["诗歌","文学"]
 tags = ["诗歌","黄灿然"]
 +++
 
-{{<img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/Huxley.jpeg" alt="">}}
+{{<img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/Huxley.jpeg" alt="阿道司·赫胥黎《最后的革命》(1959)">}}
 
 <!--more-->
 
