--- a/content/post/20230106 富士通A4电子纸固件新机能.md
+++ b/content/post/20230106 富士通A4电子纸固件新机能.md
@@ -15,7 +15,7 @@ tags = ["quaderno","firmware","功能","固件"]
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/202301091541457.png" >}}
 
-在2022年的最末一周，一向小打小闹、小修小补的富士通竟然慷慨地为客户奉上了诺大的一份圣诞礼，富士通A4 Gen2在版本号为`1.1.00.24160FP`的新固件更新日志[富士通クライアントコンピューティング「電子ペーパー QUADERNO」](https://www.fmworld.net/digital-paper/support/download/202106/dppfw/)意外共同加映了「「暗记模式」、「休眠屏保」以及「连续翻页」等三大新机能，令长期倍感冷落疏离的富士通电子纸用户幸福感瞬间爆棚。
+在2022年的最末一周，一向小打小闹、小修小补的富士通竟然慷慨地为客户奉上了诺大的一份圣诞礼，富士通A4 Gen2在版本号为`1.1.00.24160FP`的新固件更新日志[富士通電子ペーパー QUADERNO A4](https://www.fmworld.net/digital-paper/support/download/202106/dppfw/)意外共同加映了「「暗记模式」、「休眠屏保」以及「连续翻页」等三大新机能，令长期倍感冷落疏离的富士通电子纸用户幸福感瞬间爆棚。
 
 <!--more-->
 
@@ -23,7 +23,7 @@ tags = ["quaderno","firmware","功能","固件"]
 
 最新版本的更新日志如下：
 
-```
+```bash
 ■ソフトウェアバージョン
 　1.1.00.24160FP
 
