--- a/content/post/20221218二零二二年播客指北.md
+++ b/content/post/20221218二零二二年播客指北.md
@@ -7,7 +7,7 @@ comments = false
 reward = false
 aplayer = false
 mathjax = false
-slug = "convert youtube to podcast audio"
+slug = "Simple Guide On Podcast"
 keywords = ["youtube","podcast","播客"]
 tags = ["youtube","podcast","播客"]
 +++
@@ -20,8 +20,7 @@ tags = ["youtube","podcast","播客"]
 
 ## 为何选择Pocket Casts作为播客客户端
 
-近些年迷上了播客（podcast），因为经常听不明白播客、百靈果News等境外政经频道，所以首先排除了小宇宙、喜马拉雅等国内播客平台，也排除了Spotify等无法自添加rss源的保守平台，在相当一段时间内持续主动尝试全平台、泛用型客户端的Moon FM
-，只是这个软件有两个非常致命的问题影响了体验感，一是rss订阅数据无法在MacOS与iOS之间同步（尤其是 IBM关闭了免费的Cloudant 云服务[^1]），二是软件UI过于缤纷繁冗，无法沉淀用户惯性。
+过去的一年迷上了播客（podcast），因为经常听不明白播客、百靈果News等境外政经频道，所以首先排除了小宇宙、喜马拉雅等国内播客平台，也排除了Spotify等无法自添加rss源的保守平台，在相当一段时间内持续主动尝试全平台、泛用型客户端的Moon FM，只是这个软件有两个非常致命的问题影响了体验感，一是rss订阅数据无法在MacOS与iOS之间同步（尤其是 IBM关闭了免费的Cloudant 云服务[^1]），二是软件UI过于缤纷繁冗，无法沉淀用户惯性。
 
 也试用过Overcast、Castro等国外的播客客户端，但不是UI太丑就是不支持全平台。逃票到Pocket Casts，除了流畅的界面、全平台支持外，最让我着迷的是个性化Playback Effects设置：
 
